--- a/Space-Station-Website/index.html
+++ b/Space-Station-Website/index.html
@@ -27,7 +27,7 @@
     <section class="fade-section" id="#home">
         <div class="container">
             <h2>Welcome to Cosmos</h2>
-            <p class="fade-text">Explore the vast wonders of the universe. Discover new worlds, encounter alien civilizations, and embark on thrilling space adventures. The cosmos awaits your curiosity.</p>
+            <p class="glowing">Explore the vast wonders of the universe. Discover new worlds, encounter alien civilizations, and embark on thrilling space adventures. The cosmos awaits your curiosity.</p>
         </div>
     </section>
     
@@ -85,11 +85,12 @@
             </div>
         </div>
     </section>
-
+    <h2 style="text-align: center;">Reservations</h2>
     <section id="reservations" class="reservations">
         <div class="container">
-            <h2>Your Adventure Awaits!</h2>
-            <p>Please provide your information to make a reservation:</p>
+            <h2>Embark on Your Galactic Journey!</h2>
+            <p>Secure Your Seat in the Cosmos - Make Your Reservation Today:</p>
+            
             <form class="reservation-form">
                 <div class="form-group">
                     <div class="input-wrapper">
