--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Technology Trends & Innovations</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/one_page_website.css">
 </head>
 
 <body>
