--- a/bootstrap4_project/index.html
+++ b/bootstrap4_project/index.html
@@ -7,13 +7,38 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap" rel="stylesheet">
   <title>Academy Cinemas</title>
 </head>
 <body>
+<style>
+    h2, h3 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: black;
+      margin-bottom: 1rem;
+    }
+
+    h1 {
+      font-family: 'Exo', sans-serif;
+      font-weight: bold;
+    }
+
+    @keyframes moveText {
+      0% { transform: translateX(-30px); }
+      50% { transform: translateX(30px); }
+      100% { transform: translateX(-30px); }
+    }
+
+    .moving-text {
+      animation: moveText 5s infinite;
+    }
+</style>
 
 <!-- Navbar section -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
   <div class="container">
     <a class="navbar-brand" href="#">Academy Cinemas</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,16 +63,14 @@
     </div>
   </div>
 </nav>
-<!-- /Navbar section -->
 
 <!-- Jumbotron -->
-<div class="jumbotron jumbotron-fluid bg-info text-center">
+<div class="jumbotron jumbotron-fluid bg-dark text-center">
   <div class="container">
-    <h1 class="display-4 text-light">Academy Cinemas</h1>
-    <p class="lead text-light">Sit back, relax, and enjoy the show...</p>
+    <h1 id="movingHeading" class="display-4 text-light">ACADEMY Cinemas</h1>
+    <p class="lead text-light">Sit back, Relax, and Enjoy the Show!</p>
   </div>
 </div>
-<!-- /Jumbotron-->
 
 <!-- Content section -->
 <div class="container">
@@ -64,100 +87,170 @@
     </div>
     <div class="col-sm">
       <h3 id="Showtimes">Now Playing:</h3>
-      <ul class="list-group">
+      <ul class="list-group" style="border:#000 solid 1px;">
         <li class="list-group-item">
           <a class="nav-link" href="#">Kong: Skull Island</a>
+          <div class="dropdown show" style="padding-left: 5%;">
+            <a class="btn btn-secondary dropdown-toggle btn-sm btn-info" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" style="background-color: #000; border-color: #17a2b8; color: #fff;">
+              See More
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="#" target="_blank">Watch Trailer</a>
+            </div>
+          </div>
         </li>
         <li class="list-group-item">
           <a class="nav-link" href="#">Ghost in the Shell</a>
+          <div class="dropdown show" style="padding-left: 5%;">
+            <a class="btn btn-secondary dropdown-toggle btn-sm btn-info" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" style="background-color: #000; border-color: #17a2b8; color: #fff;">
+              See More
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="#" target="_blank">Watch Trailer</a>
+            </div>
+          </div>
         </li>
         <li class="list-group-item">
           <a class="nav-link" href="#">Beauty and the Beast</a>
+          <div class="dropdown show" style="padding-left: 5%;">
+            <a class="btn btn-secondary dropdown-toggle btn-sm btn-info" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" style="background-color: #000; border-color: #17a2b8; color: #fff;">
+              See More
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="#" target="_blank">Watch Trailer</a>
+            </div>
+          </div>
         </li>
       </ul>
+      
     </div>
   </div>
 </div>
-<!-- /Content section -->
 
 <!-- Showtimes section -->
 <div class="container-fluid py-5" id="Showtimes">
-    <div class="container">
-      <h2 class="text-center mb-4">Showtimes</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="./img/kongskullisland.jpg" style="width: 100%; height: 250px; alt="Kong Skull Island">
-            <div class="card-body">
-              <h5 class="card-title">Kong: Skull Island</h5>
-              <p class="card-text">A team of scientists explore an uncharted island in the Pacific,
-                venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p>
-              <ul class="list-unstyled">
-                <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
-                <li class="badge badge-pill badge-info">9:30 p.m.</li>
-              </ul>
-            </div>
+  <div class="container" >
+    <h2 class="text-center mb-4">Showtimes</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" style="border:#000 solid 1px";>
+          <img class="card-img-top" src="./img/kongskullisland.jpg" style="width: 100%; height: 250px;" alt="Kong Skull Island">
+          <div class="card-body">
+            <h5 class="card-title">Kong: Skull Island</h5>
+            <p class="card-text">A team of scientists explore an uncharted island in the Pacific,
+              venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p>
+            <ul class="list-unstyled">
+              <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
+              <li class="badge badge-pill badge-info">9:30 p.m.</li>
+            </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="./img/ghostintheshell.jpg" style="width: 100%; height: 250px; alt="Ghost in the Shell">
-            <div class="card-body">
-              <h5 class="card-title">Ghost in the Shell</h5>
-              <p class="card-text">In the near future, Major Mila Killian is the first of her kind:
-                a human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier
-                devoted to stopping the world's most dangerous criminals.</p>
-              <ul class="list-unstyled">
-                <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
-                <li class="badge badge-pill badge-info">9:30 p.m.</li>
-              </ul>
-            </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="border:#000 solid 1px";>
+          <img class="card-img-top" src="./img/ghostintheshell.jpg" style="width: 100%; height: 250px;" alt="Ghost in the Shell">
+          <div class="card-body">
+            <h5 class="card-title">Ghost in the Shell</h5>
+            <p class="card-text">In the near future, Major Mila Killian is the first of her kind:
+              a human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier
+              devoted to stopping the world's most dangerous criminals.</p>
+            <ul class="list-unstyled">
+              <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
+              <li class="badge badge-pill badge-info">9:30 p.m.</li>
+            </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="./img/beautyandthebeast.jpg" style="width: 100%; height: 250px; alt="Beauty and the Beast">
-            <div class="card-body">
-              <h5 class="card-title">Beauty and the Beast</h5>
-              <p class="card-text">A selfish prince is cursed to become a monster for the rest
-                of his life, unless he learns to fall in love with a woman he keeps as prisoner.</p>
-              <ul class="list-unstyled">
-                <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
-                <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
-                <li class="badge badge-pill badge-info">9:30 p.m.</li>
-              </ul>
-            </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="border:#000 solid 1px";>
+          <img class="card-img-top" src="./img/beautyandthebeast.jpg" style="width: 100%; height: 250px;" alt="Beauty and the Beast">
+          <div class="card-body">
+            <h5 class="card-title">Beauty and the Beast</h5>
+            <p class="card-text">A selfish prince is cursed to become a monster for the rest
+              of his life, unless he learns to fall in love with a woman he keeps as prisoner.</p>
+            <ul class="list-unstyled">
+              <li class="badge badge-pill badge-info mb-2">12:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">1:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">3:00 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">5:30 p.m.</li>
+              <li class="badge badge-pill badge-info mb-2">7:00 p.m.</li>
+              <li class="badge badge-pill badge-info">9:30 p.m.</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- /Showtimes section -->
-  
+</div>
+
+<!-- Get movie discounts section -->
+<div class="container py-5 text-center" id="Discounts" style="background-color: #000;">
+  <h3 class="text-light">Register for Discounts</h3>
+  <h5 class="text-light">Join now to receive latest movie discounts</h5>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Join Now
+  </button>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Register Form</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <fieldset class="form-group">
+            <label for="firstname">First Name:</label>
+            <input type="text" class="form-control" id="firstname" placeholder="Enter First Name...">
+          </fieldset>
+          <fieldset class="form-group">
+            <label for="lastname">Last Name:</label>
+            <input type="text" class="form-control" id="lastname" placeholder="Enter Last Name...">
+          </fieldset>
+          <fieldset class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter Email...">
+          </fieldset>
+          <fieldset class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter Password...">
+          </fieldset>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Deals section -->
-<div class="container py-5 text-center bg-secondary" id="Deals">
-  <h1 class="text-light">Sign up for Movie Club Rewards!</h1>
+<div class="container py-5 text-center" id="Deals">
+  <h3 class="text-dark" >Subscribe for Club Rewards!</h3>
   <form class="form-inline justify-content-center my-4">
     <input type="email" class="form-control mb-2 mr-sm-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    <button type="submit" class="btn btn-primary mb-2" data-toggle="popover" title="Thank you!" data-content="You will receive exclusive movie deals and updates via email.">Submit</button>
   </form>
+  
 </div>
-<!-- /Deals section -->
 
 <!-- Footer section -->
-<footer class="text-center bg-dark text-light py-4">
+<footer class="text-center" style="background-color: black; color: white; padding: 1rem;">
   <div class="container">
     <ul class="nav justify-content-center">
       <li class="nav-item">
@@ -175,12 +268,14 @@
     </ul>
   </div>
 </footer>
-<!-- /Footer section -->
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script>
+  document.getElementById("movingHeading").classList.add("moving-text");
+</script>
 </body>
 </html>
